# veritas-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: fetch_data.py  metrics.py  results.json  run.py
src/veritas_gate/: __init__.py  aliases.py  checker.py  claim_rules.py  degeneracy.py  example.py  rubric.py
tests/: test_benchmark.py  test_checker.py  test_checker_audit.py  test_claim_rules.py  test_degeneracy.py  test_rubric.py
